<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp"
    android:layout_margin="20dp">

    <ImageView
        android:id="@+id/cancel_dialog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_corner"
        android:padding="2dp"/>


    <ImageView
        android:id="@+id/check_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_verified_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/check_user_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_check"
        android:fontFamily="@font/allerta"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_user_icon"
        android:padding="10dp"/>
    <Button
        android:id="@+id/check_user_btn_patient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/patient"
        android:textAllCaps="false"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/check_user_btn_doctor"
        app:layout_constraintTop_toBottomOf="@+id/check_user_txt"
        android:layout_marginRight="5dp"
        android:padding="10dp"/>
    <Button
        android:id="@+id/check_user_btn_doctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/doctor"
        android:textAllCaps="false"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintLeft_toRightOf="@id/check_user_btn_patient"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_user_txt"
        android:layout_marginLeft="5dp"
        android:padding="10dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>