<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.OnBoardingScreen">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_layout"/>


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/dots_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"/>
        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/skip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/skip"
                android:textColor="@color/colorPrimary"
                android:background="#00000000"
                android:textAllCaps="false"
                android:onClick="skip"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/next_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="0.6"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/rounded_corner"
                android:drawableEnd="@drawable/next_icon"
                android:drawableRight="@drawable/next_icon"
                android:drawableTint="@color/white"
                android:layout_marginRight="30dp"
                android:onClick="next"
                android:elevation="10dp"/>

            <Button
                android:id="@+id/lets_get_started_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/lets_get_started"
                android:background="@drawable/rounded_corner"
                android:visibility="gone"
                android:onClick="start"
                android:elevation="10dp"/>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>